Delete now useless API calls
Now that some API use query parameters for allowing multiple filters in a single call, many API that were used before for filtering results for a single parameter are now useless because less flexible and already covered by other API calls, so are now removed in this commit from API specifications file and backend code.
