# other/controllers/Seminar.js
@@ -3,17 +3,6 @@
 var utils = require('../utils/writer.js');
 var Seminar = require('../service/SeminarService');
 
-module.exports.seminarsDateDateGET = function seminarsDateDateGET (req, res, next) {
-    var date = req.swagger.params['date'].value;
-    Seminar.seminarsDateDateGET(date)
-        .then(function (response) {
-            utils.writeJson(res, response);
-        })
-        .catch(function (response) {
-            utils.writeJson(res, response);
-        });
-};
-
 module.exports.seminarsGET = function seminarsGET (req, res, next) {
     var size = req.swagger.params['size'].value;
     var page = req.swagger.params['page'].value;
@@ -38,17 +27,6 @@ module.exports.seminarsIdGET = function seminarsIdGET (req, res, next) {
             res.statusCode = response.code;
             res.statusMessage = response.error;
             res.end();
-        });
-};
-
-module.exports.seminarsLocationLocationGET = function seminarsLocationLocationGET (req, res, next) {
-    var location = req.swagger.params['location'].value;
-    Seminar.seminarsLocationLocationGET(location)
-        .then(function (response) {
-            utils.writeJson(res, response);
-        })
-        .catch(function (response) {
-            utils.writeJson(res, response);
         });
 };
 
